Converted PassTimes data to readable format. Fixed issue with white background if height was shorter than content.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,12 +1,11 @@
 .body {
     background: url(./images/background.png);
-    height: 100vh;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100vh;
     background-position-x: center;
+    min-height: 100vh;
 }
 
 .navbar {
